<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:background="#673AB7"
        android:text="@string/alphabets"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="20dp"
        android:onClick="sky"
        android:text="@string/sky"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/txtbox"
        tools:ignore="OnClick,UsingOnClickInXml,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:onClick="grass"
        android:text="@string/grass"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbox"
        tools:ignore="OnClick,UsingOnClickInXml,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="24dp"
        android:onClick="root"
        android:text="@string/root"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/txtbox"
        tools:ignore="OnClick,UsingOnClickInXml,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtbox"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:layout_marginTop="48dp"
        android:background="#EFE4F1"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ans"
        android:layout_width="168dp"
        android:layout_height="54dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/answer"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbox"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>